--- a/app/src/main/res/menu/user.xml
+++ b/app/src/main/res/menu/user.xml
@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/nothing"
+        android:id="@+id/notifications"
         android:orderInCategory="100"
-        android:title="@string/title_logout"
+        android:icon="@drawable/ic_lock_idle_alarm"
+        android:title="@string/title_notification"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/reports"
+        android:orderInCategory="100"
+        android:title="@string/title_reports"
         app:showAsAction="never" />
 </menu>
